--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 body {
     margin: 60px auto;
     width: 70%;
-    font-family: 'Segoe UI', 'Helvetica', 'Arial', 'Sans-Serif';
 }
 nav ul, footer ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
-    font-weight: 600;
+    font-weight: bold;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -14,13 +14,14 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #2456DB;
+    color: #999;
 }
 a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 2.5em;
+    font-size: 3em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
