--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,14 @@
+html {
+    font-size: 16px;
+}
+
 body {
     margin: 60px auto;
     width: 70%;
     font-family: Calibri, 'Segoe UI', 'Helvetica', 'Arial', 'Sans-Serif';
 }
 nav ul, footer ul {
-    padding: 0px;
+    padding: 0;
     list-style: none;
     font-weight: bold;
 }
@@ -23,7 +27,7 @@ h1 {
     font-size: 2.5em;
 }
 p {
-    font-size: 1.5em;
+    font-size: 1em;
     line-height: 1.4em;
     color: #333;
 }
@@ -34,7 +38,7 @@ footer {
 
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 ul.posts li {
