--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,9 @@ footer ul li {
     margin-right: 20px;
 }
 
+main{
+    padding-bottom: 2em;
+}
 a {
     text-decoration: none;
     color: #0B6FBF;
