--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
 		</main><!-- /.container -->
 		<footer>
 			<ul>
-				<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-				<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+				<!-- <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li> -->
+				<li><a href="https://jlukosky.github.io">jlukosky.github.io</a></li>
 			</ul>
 		</footer>
 	</body>
