--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,9 @@ a {
 }
 
 a:hover {
+    text-decoration:underline;
+}
+a:focus {
     color: #0068F0;
     outline-color: #0068F0;
     outline-offset: -2px;
@@ -38,7 +41,7 @@ a:hover {
 
 
 
-input[type="text"], input[type="email"], input[type="password"]{
+input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus{
     outline-color: #0068F0;
     outline-offset: -2px;
     outline-style: auto;
