--- a/css/main.css
+++ b/css/main.css
@@ -5,15 +5,82 @@ html {
 body {
     margin: 60px auto;
     width: 70%;
-    font-family: Calibri, 'Segoe UI', 'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
 }
 
+main.container{
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
+    font-size: 1rem;
+    line-height: 1.5;
+    word-wrap: break-word;
+    padding-bottom: 2em;
+}
+
+article, aside, details, figcaption, figure, footer, header, main, menu, nav, section{
+    display:block;
+}
+*{box-sizing:border-box;}
 nav ul,
 footer ul {
     padding: 0;
     list-style: none;
     font-weight: bold;
 }
+main.container>:first-child {
+    margin-top: 0!important;
+}
+main.container h1, .markdown-body h2 {
+    border-bottom: 1px solid #eaecef;
+    padding-bottom: .3em;
+}
+main.container h1 {
+    font-size: 2em;
+}
+main.container h2 {
+    font-size: 1.5em;
+}
+main.container h3 {
+    font-size: 1.25em;
+}
+main.container h4 {
+    font-size: 1em;
+}
+main.container h5 {
+    font-size: .875em;
+}
+main.container h6 {
+    color: #6a737d;
+    font-size: .85em;
+}
+main.container blockquote, main.container details, main.container dl, main.container ol, main.container  p, main.container pre, main.container table, main.container ul {
+    margin-bottom: 16px;
+    margin-top: 0;
+}
+
+p {
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
+
+main.container h1, main.container h2, main.container h3, main.container h4, main.container h5, main.container h6 {
+    font-weight: 600;
+    line-height: 1.25;
+    margin-bottom: 16px;
+    margin-top: 24px;
+}
+
+main.container ol, main.container ul {
+    padding-left: 2em;
+}
+main.container code, main.container tt {
+    background-color: rgba(27,31,35,.05);
+    border-radius: 3px;
+    font-size: 85%;
+    margin: 0;
+    padding: .2em .4em;
+}
+
 
 nav ul li,
 footer ul li {
@@ -21,9 +88,6 @@ footer ul li {
     margin-right: 20px;
 }
 
-main{
-    padding-bottom: 2em;
-}
 a {
     color: #0055BE;
     text-decoration:none;
@@ -50,48 +114,8 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 
-h1 {
-    font-size: 2em;
-    color: #444444;
-}
-
-h2 {
-    font-size: 1.9em;
-    font-weight: 600;
-    color: #444444;
-}
-
-h3 {
-    font-size: 1.7em;
-    font-weight: 600;
-    color: #444444;
-}
-
-h4 {
-    font-size: 1.5em;
-    font-weight: 600;
-    color: #444444;
-}
-
-h5 {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #444444;
-}
-
-h6 {
-    font-size: 1em;
-    font-weight: bold;
-    color: #444444;
-}
 
 
-p {
-    font-size: 1em;
-    line-height: 1.4em;
-    color: #333;
-    margin: 1em 0 0;
-}
 
 footer {
     border-top: 1px solid #d5d5d5;
