--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About</a></li>
-				<li><a href="/cv">CV</a></li>
+				<!-- <li><a href="/cv">CV</a></li> -->
 				<li><a href="/blog">Blog</a></li>
 			</ul>
 		</nav>
@@ -23,7 +23,7 @@
 		<footer>
 			<ul>
 				<!-- <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li> -->
-				<li><a href="https://jlukosky.github.io">jlukosky.github.io</a></li>
+				<li><a href="https://jlukosky.github.io">John Lukosky's Building Accessibility Blog</a></li>
 			</ul>
 		</footer>
 	</body>
