--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>{{ page.title }}</title>
-		<meta name="description" content="{{ page.title }}"/>
+		<meta name="description" content="{{ page.description }}"/>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
