--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta property="og:image" content="{{ page.ogimage }}"/>
 	</head>
 	<body>
 		<nav>
