--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>{{ page.title }}</title>
+		<title>{{ page.title }} - Building Accessibility Blog</title>
 		<meta name="description" content="{{ page.description }}"/>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -25,7 +25,7 @@
 		<footer>
 			<ul>
 				<!-- <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li> -->
-				<li><a href="https://jlukosky.github.io">John Lukosky's Building Accessibility Blog</a></li>
+				<li><a href="https://jlukosky.github.io">Building Accessibility Blog</a></li>
 			</ul>
 		</footer>
 	</body>
