updating meta information and changing name of blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>{{ page.title }} - Building Accessibility Blog</title>
+		<title>{{ page.title }} - Advancing Accessibility Blog</title>
+		<meta property="og:title" content="{{ page.title }}"/>
 		<meta name="description" content="{{ page.description }}"/>
+		<meta property="og:description" content="{{ page.description }}"/>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,7 +13,7 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="/">Home</a></li>
+				<li><a href="/">Advancing Accessibility Blog</a></li>
 				<li><a href="/about">About</a></li>
 				<li><a href="/tools">Tools</a></li>
 				<!-- <li><a href="/blog">Blog</a></li> -->
@@ -24,8 +26,7 @@
 		</main><!-- /.container -->
 		<footer>
 			<ul>
-				<!-- <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li> -->
-				<li><a href="https://jlukosky.github.io">Building Accessibility Blog</a></li>
+				<li><a href="https://twitter.com/JLukosky?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-dnt="true" data-show-count="false">Follow @JLukosky</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
 			</ul>
 		</footer>
 	</body>
