--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
 		<meta property="og:image" content="{{ page.ogimage }}"/>
 	</head>
 	<body>
-		<nav>
+			<a href="#maincontent" class="skiptomain">Skip to main content</a>
+		<nav>			
 			<ul>
 				<li><a href="/">Advancing Accessibility Blog</a></li>
 				<li><a href="/about">About</a></li>
@@ -19,7 +20,7 @@
 				<!-- <li><a href="/blog">Blog</a></li> -->
 			</ul>
 		</nav>
-		<main class="container">
+		<main class="container" id="maincontent">
 		
 		{{ content }}
 		
