--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,24 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
+.skiptomain {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+    background-color:#FFFFFF;
+}
+.skiptomain:focus {
+    position:relative;
+    left: 0;
+    top:auto;
+    width:200px;
+    height:auto;
+    overflow: visible;
+}
+
 @media screen and (max-width: 640px) {
     body {
         width: 90%;
