--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 			<a href="#maincontent" class="skiptomain">Skip to main content</a>
 		<nav>			
 			<ul>
-				<li><a href="/">Advancing Accessibility Blog</a></li>
+				<li><a href="/">Advancing Accessibility</a></li>
 				<li><a href="/about">About</a></li>
 				<li><a href="/tools">Tools</a></li>
 				<!-- <li><a href="/blog">Blog</a></li> -->
