--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,13 @@ main.container ul {
     margin-top: 0;
 }
 
+@media screen and (max-width: 640px) {
+    main.container>ol,
+    main.container>ul {
+        padding-left: 0;
+    }
+}
+
 main.container:before {
     content: "";
     display: table;
