--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta property="og:image" content="{{ page.ogimage }}"/>
+		<link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://jlukosky.github.io/favicon.ico">
 	</head>
 	<body>
 			<a href="#maincontent" class="skiptomain">Skip to main content</a>
