--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,13 @@ main.container h4 {
     font-size: 1em;
 }
 
+main.container .h4 {
+    font-weight: 600;
+    line-height: 1.25;
+    margin-bottom: 16px;
+    margin-top: 24px;
+}
+
 main.container h5 {
     font-size: .875em;
 }
@@ -255,6 +262,8 @@ main.container .tag-box.inline li {
     font-size: 14px;
     font-size: 0.875rem;
     line-height: 2.5;
+    margin-top: 0;
+
 }
 
 main.container .tag-box a {
