--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ main.container h4 {
 }
 
 main.container .h4 {
+    font-size: 1em;
     font-weight: 600;
     line-height: 1.25;
     margin-bottom: 16px;
