--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>{{ page.title }} - Advancing Accessibility Blog</title>
+		<title>{{ page.title }} - Advancing Accessibility</title>
 		<meta property="og:title" content="{{ page.title }}"/>
 		<meta name="description" content="{{ page.description }}"/>
 		<meta property="og:description" content="{{ page.description }}"/>
