--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,23 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 
-<p class="view">by {{ page.author | default: site.author }} </p>
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
+<p class="view">by {{ page.author | default: site.author }} on {{ page.date | date: "%-d %B %Y" }</p>
 
 {{content}}
 
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+
+  <div class="post-tags">
+    {% if post %}
+      {% assign tags = post.tags %}
+    {% else %}
+      {% assign tags = page.tags %}
+    {% endif %}
+    {% for tag in tags %}
+    <a href="{{site.baseurl}}/tags/#{{tag|slugize}}">{{category}}</a>
+    {% unless forloop.last %}&nbsp;{% endunless %}
+    {% endfor %}
+  </div>
+
 {% endif %}
