--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 
-<p class="view">by {{ page.author | default: site.author }} on {{ page.date | date: "%-d %B %Y" }</p>
+<p class="view">by {{ page.author | default: site.author }} on {{ page.date | date: "%-d %B %Y" }}</p>
 
 {{content}}
 
