tag update again!

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,8 +11,8 @@ layout: default
 
 {% if page.tags %}
   <!-- <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small> -->
-
-  <div class="post-tags tag-box">
+Tags: 
+  <div class="post-tags tag-box">Tags: 
     {% if post %}
       {% assign tags = post.tags %}
     {% else %}
