--- a/css/main.css
+++ b/css/main.css
@@ -270,15 +270,18 @@ main.container .tag-box a {
     padding: 4px 6px;
     margin: 2px;
     background-color: #e6e6e6;
+    border-width: 1px;
+    border-style: solid;
+    border-color:#e6e6e6;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
     text-decoration: none;
 }
 
-main.container .tag-box a:hover,
-main.container .tag-box a:focus {
-    border: 1px solid #666;
+main.container .tag-box a:focus,
+main.container .tag-box a:hover {
+    border-color: #666666;
 }
 
 main.container .tag-box a span {
