--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 		</main><!-- /.container -->
 		<footer>
 			<ul>
-				<li><a id="follow-button" class="btn" title="Follow @JLukosky on Twitter" href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F%3FbuttonLarge%3Don%26buttonType%3DFollowButton%26query%3Dhttps%253A%252F%252Ftwitter.com%252FJLukosky%26widget%3DButton&amp;ref_src=twsrc%5Etfw&amp;region=follow_link&amp;screen_name=JLukosky&amp;tw_p=followbutton"><i></i><span class="label" id="l">Follow <b>@JLukosky</b></span></a>
+				<li><a id="follow-button" class="btn" title="Follow @JLukosky on Twitter" href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F%3FbuttonLarge%3Don%26buttonType%3DFollowButton%26query%3Dhttps%253A%252F%252Ftwitter.com%252FJLukosky%26widget%3DButton&amp;ref_src=twsrc%5Etfw&amp;region=follow_link&amp;screen_name=JLukosky&amp;tw_p=followbutton" target="_blank"><i></i><span class="label" id="l">Follow <b>@JLukosky</b></span></a>
 
 					<style>
 						#follow-button {
